--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,10 @@ version: 1.0.0
 environment:
   sdk: ">=2.16.2 <3.0.0"
 
+dependencies:
+  grpc: ^3.0.2
+  protobuf: ^2.1.0
+
 dev_dependencies:
   lints: ^1.0.0
   test: ^1.16.0
